# tactile_gym

./: .gitignore  sensor_maps.py  tgym2.yaml
examples/: demo_edge_env.py  demo_example_arm_env.py  demo_surf_auto_env.py
tactile_gym/assets/robot_assets/gelsight_mini/standard_gelsight_mini/gelsight_mini_asmb/: CMakeLists.txt  package.xml
tactile_gym/assets/robot_assets/gelsight_mini/standard_gelsight_mini/gelsight_mini_asmb/launch/: display.launch  gazebo.launch
tactile_gym/assets/robot_assets/gelsight_mini/standard_gelsight_mini/gelsight_mini_asmb/meshes/: gelsight_mini_body.stl  gelsight_mini_core.stl
tactile_gym/assets/robot_assets/gelsight_mini/standard_gelsight_mini/gelsight_mini_asmb/urdf/: gelsight_mini_asmb.csv  gelsight_mini_asmb.urdf
tactile_gym/assets/robot_assets/gelsight_mini/standard_gelsight_mini/gelsight_mini_asmb_hollow/: CMakeLists.txt  package.xml
tactile_gym/assets/robot_assets/gelsight_mini/standard_gelsight_mini/gelsight_mini_asmb_hollow/launch/: display.launch  gazebo.launch
tactile_gym/assets/robot_assets/gelsight_mini/standard_gelsight_mini/gelsight_mini_asmb_hollow/meshes/: gelsight_mini_body.stl  gelsight_mini_core.stl
tactile_gym/assets/robot_assets/gelsight_mini/standard_gelsight_mini/gelsight_mini_asmb_hollow/urdf/: gelsight_mini_asmb_hollow.csv  gelsight_mini_asmb_hollow.urdf
tactile_gym/rl_envs/example_envs/example_arm_env/: rest_poses.py
tactile_gym/rl_envs/exploration/edge_follow/: edge_follow_env.py  rest_poses.py
tactile_gym/rl_envs/exploration/surface_follow/: base_surface_env.py  rest_poses.py
tactile_gym/robots/arms/: robot.py
tactile_gym/sb3_helpers/: train_agent.py
tactile_gym/sensors/: tactile_sensor.py
(+8 files in other folders)
