<package format="2">
  <name>gelsight_mini_asmb_hollow</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for gelsight_mini_asmb_hollow</p>
    <p>This package contains configuration data, 3D models and launch files
for gelsight_mini_asmb_hollow robot</p>
  </description>
  <author>Alexandre COLAS</author>
  <maintainer email="alexandr.colas@free.fr" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>